# liblight

./: .gitignore  CMakeLists.txt  ReadMe.md
inc/: camera-default.hpp  camera-usual.hpp  camera.hpp  img-util.hpp  material-default.hpp  material.hpp  node-component.hpp  node.hpp  prerequisites.hpp  renderer-patht-iterable.hpp  renderer-patht.hpp  renderer.hpp  resmg.hpp  scene.hpp  texture2d.hpp  tree.hpp
inc/exceptions/: msg-exception.hpp
inc/readers/: reader-simple.hpp
src/: api-dev-mod.hpp  camera-default.cpp  camera-usual.cpp  material-default.cpp  renderer-patht-iterable.cpp  renderer-patht.cpp  renderer-wt.cpp  resmg.cpp  scene-tile.cpp
test/: CMakeLists.txt  test-app.cpp  test-app.hpp  test-main.cpp
test/data/: cornell-box.json  glass-spheres.json  light-up.json  test-simple-rdr.json
test/shader/: sprite_fs.glsl  sprite_vs.glsl  test_cs.glsl
tools/glfw/: CMakeLists.txt
tools/math/inc/: aabbox.h  color.h  intersection.h  material.h  math-utils.h  mathinc.h  matrix4.h  my-prerequisites.h  point3.h  random.h  ray3.h  resolution.h  shape-rectangle.h  shape-sphere.h  shape-triangle.h  shape.h  triangleface.h  vector3.h
